[gd_scene load_steps=12 format=3 uid="uid://q0hetfe044xi"]

[ext_resource type="Texture2D" uid="uid://cjwdevwcd45xb" path="res://Sprites/Machine2/machine2_defult.png" id="1_6jlth"]
[ext_resource type="Texture2D" uid="uid://pf6unwkipnfy" path="res://Sprites/Machine2/machine2_generate.png" id="2_c40fi"]
[ext_resource type="Script" path="res://Scripts/Machine.gd" id="3_50q06"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gpn0k"]
atlas = ExtResource("2_c40fi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_drrr3"]
atlas = ExtResource("2_c40fi")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsns5"]
atlas = ExtResource("2_c40fi")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_781fr"]
atlas = ExtResource("2_c40fi")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5d4q"]
atlas = ExtResource("2_c40fi")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cykx8"]
atlas = ExtResource("2_c40fi")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eftmp"]
atlas = ExtResource("2_c40fi")
region = Rect2(192, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ww66n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_6jlth")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpn0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drrr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsns5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_781fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5d4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cykx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eftmp")
}],
"loop": false,
"name": &"generate",
"speed": 10.0
}]

[node name="Machine" type="AnimatedSprite2D"]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_ww66n")
script = ExtResource("3_50q06")
index = 2

[node name="GenerateTimer" type="Timer" parent="."]
wait_time = 7.0

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="timeout" from="GenerateTimer" to="." method="_on_generate_timer_timeout"]
